--- a/resources/webinterface/dashboard/controllerbinding.html
+++ b/resources/webinterface/dashboard/controllerbinding.html
@@ -16,15 +16,15 @@
 	<link crossorigin="anonymous" rel="preload" as="font" href="/fonts/get_font?font=motiva-sans-black.ttf" />
 	<link crossorigin="anonymous" rel="preload" as="font" href="/fonts/get_font?font=motiva-sans-extrabold.ttf" />
 
-	<link href="css/fonts/motiva_sans.css?t=1576720379206" rel="stylesheet" />
+	<link href="css/fonts/motiva_sans.css?t=1578422656393" rel="stylesheet" />
 
-	<link href="css/styles.css?t=1576720379206" rel="stylesheet" />
-	<link href="css/controllerbinding.css?t=1576720379206" rel="stylesheet" />
-	<link href="css/bindinglist.css?t=1576720379206" rel="stylesheet" />
+	<link href="css/styles.css?t=1578422656393" rel="stylesheet" />
+	<link href="css/controllerbinding.css?t=1578422656393" rel="stylesheet" />
+	<link href="css/bindinglist.css?t=1578422656393" rel="stylesheet" />
 </head>
 
-<body>
+<body class="ControllerMain">
 	<div id='root'></div>
-<script type="text/javascript" src="libraries.js?v=4aceb787d2c4da9c57ac"></script><script type="text/javascript" src="vrwebui_shared.js?v=9aff22a9aa4822d4016b"></script><script type="text/javascript" src="controllerbindingui.js?v=69e5193f6860026dac1f"></script></body>
+<script type="text/javascript" src="libraries.js?v=654d5b339afc5f619b7f"></script><script type="text/javascript" src="vrwebui_shared.js?v=2ea868bf22257e89cd5a"></script><script type="text/javascript" src="controllerbindingui.js?v=43882747d6e203c315fd"></script></body>
 
 </html>
