1578959368 | 63 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_finnish.txt,  M content/vrmonitor/translations/vrmonitor_errors_turkish.txt,  M content/vrmonitor/translations/vrmonitor_greek.txt,  M content/vrmonitor/translations/vrmonitor_latam.txt,  M content/vrmonitor/translations/vrmonitor_polish.txt,  M content/vrmonitor/translations/vrmonitor_turkish.txt,  M content/vrmonitor/translations/vrmonitor_vietnamese.txt,  M drivers/lighthouse/resources/webinterface/libraries.js,  M drivers/lighthouse/resources/webinterface/pairing.html,  M drivers/lighthouse/resources/webinterface/pairing.js,  M drivers/lighthouse/resources/webinterface/vrwebui_shared.js,  M drivers/oculus/resources/input/vrcompositor_bindings_touch.json,  M resources/config/vrcompositor_bindings_generic_hmd.json,  M resources/config/vrcompositor_bindings_knuckles.json,  M resources/config/vrcompositor_bindings_vive_controlle
https://steamdb.info/patchnotes/4566925/

--- a/resources/webinterface/dashboard/bindingcallouts.html
+++ b/resources/webinterface/dashboard/bindingcallouts.html
@@ -16,13 +16,13 @@
 	<link crossorigin="anonymous" rel="preload" as="font" href="/fonts/get_font?font=motiva-sans-black.ttf" />
 	<link crossorigin="anonymous" rel="preload" as="font" href="/fonts/get_font?font=motiva-sans-extrabold.ttf" />
 
-	<link href="css/fonts/motiva_sans.css?t=1576720379206" rel="stylesheet" />
+	<link href="css/fonts/motiva_sans.css?t=1578958864875" rel="stylesheet" />
 
-	<link href="css/styles.css?t=1576720379206" rel="stylesheet" />
-	<link href="css/systemui.css?t=1576720379206" rel="stylesheet" />
+	<link href="css/styles.css?t=1578958864875" rel="stylesheet" />
+	<link href="css/systemui.css?t=1578958864875" rel="stylesheet" />
 
 	<style>
-		vsg-panel {
+		[vsg-type=panel] {
 			display: inline-flex;
 		}
 	</style>
@@ -30,6 +30,6 @@
 
 <body>
 	<div id='root'></div>
-<script type="text/javascript" src="libraries.js?v=4aceb787d2c4da9c57ac"></script><script type="text/javascript" src="vrwebui_shared.js?v=9aff22a9aa4822d4016b"></script><script type="text/javascript" src="bindingcallouts.js?v=9388b07c51db72accc06"></script></body>
+<script type="text/javascript" src="libraries.js?v=654d5b339afc5f619b7f"></script><script type="text/javascript" src="vrwebui_shared.js?v=2ea868bf22257e89cd5a"></script><script type="text/javascript" src="bindingcallouts.js?v=d9bd46ed7cc6165397c1"></script></body>
 
 </html>
