--- a/resources/webinterface/dashboard/settings_desktop.html
+++ b/resources/webinterface/dashboard/settings_desktop.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Notification Toast</title>
+	<title>SteamVR Settings</title>
 
 	<link crossorigin="anonymous" rel="preload" as="font" href="/fonts/get_font?font=motiva-sans-regular.ttf" />
 	<link crossorigin="anonymous" rel="preload" as="font" href="/fonts/get_font?font=motiva-sans-light.ttf" />
@@ -19,12 +19,12 @@
 	<link href="css/fonts/motiva_sans.css?t=1585941020685" rel="stylesheet" />
 
 	<link href="css/base.css?t=1585941020685" rel="stylesheet" />
-	<link href="css/systemui.css?t=1585941020685" rel="stylesheet" />
-	<link href="css/notifications.css?t=1585941020685" rel="stylesheet" />
+	<link href="css/vrsettings.css?t=1585941020685" rel="stylesheet" />
+	<link rel="icon" href="/dashboard/images/icons/icon_settings.png" />
 </head>
 
 <body>
-	<div id='root'></div>
-<script type="text/javascript" src="libraries.js?v=8f566fdb2bbc78483bcd"></script><script type="text/javascript" src="vrwebui_shared.js?v=647c4bdf866a9564156c"></script><script type="text/javascript" src="notificationtoast.js?v=0ed12c7e5f99aaac1efc"></script></body>
+	<div id='settingsRoot'></div>
+<script type="text/javascript" src="libraries.js?v=8f566fdb2bbc78483bcd"></script><script type="text/javascript" src="vrwebui_shared.js?v=647c4bdf866a9564156c"></script><script type="text/javascript" src="settings_desktop.js?v=8a05416475689c8db1b0"></script></body>
 
 </html>
